[Win] Improvements to run loop timer resolution https://bugs.webkit.org/show_bug.cgi?id=284823

Reviewed by Yusuke Suzuki.

WM_TIMER has a 10ms resolution, which means we can't hit 60fps on
requestAnimationFrame. By using MsgWaitForMultipleObjectsEx and
maintaining our own timer queue we can get better timer resolution.

* Source/WTF/wtf/RunLoop.h:
* Source/WTF/wtf/win/RunLoopWin.cpp:
(WTF::RunLoop::wndProc):
(WTF::RunLoop::run):
(WTF::RunLoop::msTillNextTimer):
(WTF::RunLoop::fireTimers):
(WTF::RunLoop::cycle):
(WTF::RunLoop::TimerBase::timerFired):
(WTF::RunLoop::TimerBase::start):
(WTF::RunLoop::TimerBase::stop):

Canonical link: https://commits.webkit.org/292846@main